# AgentSpace

./: .env.example  .gitignore  DEPLOY.md  INSTALL.md  ONESHEET.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-security/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-gateway-core/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-RESEARCH.md
.planning/phases/03-cli-interface/: 03-01-PLAN.md  03-02-PLAN.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-multi-provider-intelligence/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  deferred-items.md
.planning/phases/05-memory-persistence/: 05-01-SUMMARY.md  05-03-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-agent-capabilities/: 06-RESEARCH.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_NOTES_v03.md  INTEGRATION_RISKS.md  PITFALLS.md  README_v03.md  STACK.md  STACK_v03_CHECKLIST.md  STACK_v03_INTEGRATION.md  SUMMARY.md  WORKFLOWS_v03.md
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
scripts/: dev-install.sh  dist.sh  install.sh  remote-install.sh  reset.sh  update.sh  upload-cdn.sh
scripts/install/: install.sh
(+166 files in other folders)
